include/altdss/capi/dss.h

    // API extensions
    ALTDSS_CAPI_DLL int32_t CNData_Get_Count(void);
    ALTDSS_CAPI_DLL int32_t CNData_Get_First(void);
    ALTDSS_CAPI_DLL int32_t CNData_Get_Next(void);
    ALTDSS_CAPI_DLL const char* CNData_Get_Name(void);
    ALTDSS_CAPI_DLL void CNData_Set_Name(const char* Value);
    ALTDSS_CAPI_DLL void CNData_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL double CNData_Get_Rdc(void);
    ALTDSS_CAPI_DLL void CNData_Set_Rdc(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_Rac(void);
    ALTDSS_CAPI_DLL void CNData_Set_Rac(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_GMRac(void);
    ALTDSS_CAPI_DLL void CNData_Set_GMRac(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_GMRUnits(void);
    ALTDSS_CAPI_DLL void CNData_Set_GMRUnits(int32_t Value);
    ALTDSS_CAPI_DLL double CNData_Get_Radius(void);
    ALTDSS_CAPI_DLL void CNData_Set_Radius(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_RadiusUnits(void);
    ALTDSS_CAPI_DLL void CNData_Set_RadiusUnits(int32_t Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_ResistanceUnits(void);
    ALTDSS_CAPI_DLL void CNData_Set_ResistanceUnits(int32_t Value);
    ALTDSS_CAPI_DLL double CNData_Get_Diameter(void);
    ALTDSS_CAPI_DLL void CNData_Set_Diameter(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_NormAmps(void);
    ALTDSS_CAPI_DLL void CNData_Set_NormAmps(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_EmergAmps(void);
    ALTDSS_CAPI_DLL void CNData_Set_EmergAmps(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_EpsR(void);
    ALTDSS_CAPI_DLL void CNData_Set_EpsR(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_InsLayer(void);
    ALTDSS_CAPI_DLL void CNData_Set_InsLayer(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaIns(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaIns(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaCable(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaCable(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_k(void);
    ALTDSS_CAPI_DLL void CNData_Set_k(int32_t Value);
    ALTDSS_CAPI_DLL double CNData_Get_DiaStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_DiaStrand(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_GmrStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_GmrStrand(double Value);
    ALTDSS_CAPI_DLL double CNData_Get_RStrand(void);
    ALTDSS_CAPI_DLL void CNData_Set_RStrand(double Value);
    ALTDSS_CAPI_DLL int32_t CNData_Get_idx(void);
    ALTDSS_CAPI_DLL void CNData_Set_idx(int32_t Value);